# wgpu_fem

./: Cargo.toml
src/: main.rs  pipeline_builder.rs  shader.wgsl  state_wgpu.rs  window.rs
src/shaders/: shader.wgsl
