[package]
name = "wgpu_fem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "*" # Controls the window environment.
wgpu = "*" # Draws in the graphics card.
pollster = "*" # To solve async situations.
